# SillySynth

./: LICENSE.txt  README.md  SillySynth.sln
SillySynth/: EnvelopeStage.cs  IMusSynthesizer.cs  LowFrequencyOscillator.cs  LowPassFilter.cs  ModEnvelope.cs  MusData.cs  MusSequencer.cs  MusSynthesizer.cs  MusSynthesizerChannel.cs  MusSynthesizerVoice.cs  NativeExports.cs  SillySynth.csproj  VolumeEnvelope.cs
SillySynth.NativeTest/: CMakeLists.txt
SillySynth.NativeTest/Source/: SillySynth.h
SillySynth.SoundFont/: Sf2.cs  Sf2File.cs  Sf2FileInfo.cs  Sf2FilePresetData.cs  Sf2Generators.cs  Sf2Instrument.cs  Sf2Modulator.cs  Sf2Preset.cs  Sf2RiffHeader.cs  Sf2Sample.cs  Sf2SynthParam.cs  Sf2Zone.cs
